--- a/templates/tpl14/css/style.css
+++ b/templates/tpl14/css/style.css
@@ -194,20 +194,20 @@ strong { font-weight: bold; }
 	.main_content.container { display: flex; flex-wrap: wrap; }
 	.main_content .left_side { float: none; width: 100%; order: 1; }
 	.main_content .right_side { float: none; width: 100%; order: 0; }
-	.description__right { width: 100%; padding: 10px; box-sizing: border-box; float: none; font-size: 15px; line-height: 1.4; margin-bottom: 0; }
+	.description__right { width: 100%; padding: 10px; box-sizing: border-box; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; -ms-box-sizing: border-box; -o-box-sizing: border-box; float: none; font-size: 15px; line-height: 1.4; margin-bottom: 0; }
 	.description__right h2 { font-size: 40px; line-height: 45px; margin-bottom: 10px; }
 	.description__right p ~ h2 { margin-top: 15px; } 
 	.description__right ul { margin-top: 10px; }
 	.description__right li { padding-left: 25px; margin-bottom: 10px; }
 	.description__right table { width: 100%; }
-	.reviews { width: 100%; padding: 10px; box-sizing: border-box; margin-bottom: 30px; }
+	.reviews { width: 100%; padding: 10px; box-sizing: border-box; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; -ms-box-sizing: border-box; -o-box-sizing: border-box; margin-bottom: 30px; }
 	.reviews h2 { font-size: 45px; line-height: 48px; margin-bottom: 15px; }
 	.reviews li { margin-bottom: 30px; padding-bottom: 0 10px; }
 	.reviews li p { font-size: 15px; line-height: 20px; }
 	.reviews img { margin-bottom: 10px; }
-	.review-doctors { float: none; width: 100%; font-size: 15px; line-height: 20px; padding: 15px 10px 10px; margin-bottom: 0; box-sizing: border-box; }
+	.review-doctors { float: none; width: 100%; font-size: 15px; line-height: 20px; padding: 15px 10px 10px; margin-bottom: 0; box-sizing: border-box; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; -ms-box-sizing: border-box; -o-box-sizing: border-box; }
 	.review-doctors h2 { font-size: 40px; line-height: 45px; }
-	.review-doctors li { padding: 10px; box-sizing: border-box; margin-bottom: 10px; }
+	.review-doctors li { padding: 10px; box-sizing: border-box; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; -ms-box-sizing: border-box; -o-box-sizing: border-box; margin-bottom: 10px; }
 	.cream__left { font-size: 15px; line-height: 20px; }
 	.cream__left .sale { margin-bottom: 20px; }
 	.cream__left h3 { padding-bottom: 10px; }
