--- a/templates/tpl14/css/style.css
+++ b/templates/tpl14/css/style.css
@@ -191,7 +191,7 @@ strong { font-weight: bold; }
 	.cream__title h2 { font-size: 40px; }
 	.cream__title .cream__order { float: none; }
 	.cream__title .cream__price { float: none; margin: 10px auto 0; }
-	.main_content.container { display: flex; flex-wrap: wrap; }
+	.main_content.container { display: flex; -webkit-display: flex; -moz-display: flex; -ms-display: flex; o-display: flex; flex-wrap: wrap; }
 	.main_content .left_side { float: none; width: 100%; order: 1; }
 	.main_content .right_side { float: none; width: 100%; order: 0; }
 	.description__right { width: 100%; padding: 10px; box-sizing: border-box; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; -ms-box-sizing: border-box; -o-box-sizing: border-box; float: none; font-size: 15px; line-height: 1.4; margin-bottom: 0; }
