--- a/templates/tpl13/css/style.css
+++ b/templates/tpl13/css/style.css
@@ -175,10 +175,17 @@ strong { font-weight: bold; }
 
 .footer__order a { display: inline-block; vertical-align: top; text-decoration: none; color: #ffffff; text-transform: uppercase; font-family: "RobotoCondensedBold", "Arial", sans-serif; font-size: 20px; line-height: 48px; height: 50px; background: #00d8de url("../images/header-btn-bg.png") 25px 13px no-repeat; width: 205px; padding-left: 56px; border-radius: 30px; }
 
+.menu__toggler { display: none; }
+
 @media screen and (max-width: 320px) {
 	body { min-width: 320px; }
+	.menu__toggler { display: block; width: 24px; height: 24px; margin: 10px auto 0; padding: 10px; background: url('../images/menu_icon.png') no-repeat center center; transform: rotate(0); transition: all 0.2s ease 0s; }
+	.menu__toggler.active { transform: rotate(90deg); }
+	.menu__toggler + .menu__nav { height: 0; opacity: 0; margin-top: -10px; visibility: hidden; transition: all 0.2s ease 0s; }
+	.menu__toggler + .menu__nav.expanded { height: auto; margin-top: 0; opacity: 1; visibility: visible; }
 	.container { width: 100%; }
-	.header-container { width: 100%; padding-bottom: 20px; }
+	.header { background-size: contain; }
+	.header-container { width: 100%; padding-bottom: 20px; background: transparent; }
 	.header__top .container { text-align: center; }
 	.header__top .official__link { float: none; }
 	.header__top .menu__nav { float: none; }
