--- a/templates/tpl14/css/style.css
+++ b/templates/tpl14/css/style.css
@@ -169,8 +169,14 @@ strong { font-weight: bold; }
 
 .footer__order a { display: inline-block; vertical-align: top; text-decoration: none; color: #e31512; text-transform: uppercase; font-family: "RobotoCondensedBold", "Arial", sans-serif; font-size: 20px; line-height: 31px; height: 31px; width: 122px; text-align: center; background: transparent url("../images/header-btn-bg.png") top center no-repeat; }
 
+.menu__toggler { display: none; }
+
 @media screen and (max-width: 320px) {
 	body { min-width: 320px; }
+	.menu__toggler { display: inline-block; width: 24px; height: 24px; margin: 0 auto 10px; padding: 10px; background: url('../images/menu_icon.png') no-repeat center center; transform: rotate(0); transition: all 0.2s ease 0s; }
+	.menu__toggler.active { transform: rotate(90deg); }
+	.menu__toggler + .menu__nav { height: 0; opacity: 0; margin-top: -10px; visibility: hidden; transition: all 0.2s ease 0s; }
+	.menu__toggler + .menu__nav.expanded { height: auto; margin-top: 0; opacity: 1; visibility: visible; }
 	.container { width: 100%; }
 	.header__top { padding-bottom: 10px; }
 	.header__top .official__link { float: none; text-align: center; }
@@ -178,7 +184,7 @@ strong { font-weight: bold; }
 	.header__middle { padding-top: 20px; }
 	.header__middle .logo { float: none; text-align: center; width: 100%; height: auto; margin-bottom: 10px; }
 	.header__middle .menu__nav { float: none; }
-	.header__middle .menu__items { float: none; margin: 0; text-align: center; }
+	.header__middle .menu__items { padding: 5px 0; float: none; margin: 0; text-align: center; }
 	.header__middle .social { float: none; margin: 0; padding: 10px 0; }
 	.social__menu { float: none; }
 	.header__middle .social__menu { float: none; text-align: center; }
