--- a/templates/tpl14/css/style.css
+++ b/templates/tpl14/css/style.css
@@ -173,7 +173,7 @@ strong { font-weight: bold; }
 
 @media screen and (max-width: 320px) {
 	body { min-width: 320px; }
-	.menu__toggler { display: inline-block; width: 24px; height: 24px; margin: 0 auto 10px; padding: 10px; background: url('../images/menu_icon.png') no-repeat center center; transform: rotate(0); transition: all 0.2s ease 0s; }
+	.menu__toggler { display: block; width: 24px; height: 24px; margin: 0 auto 10px; padding: 10px; background: url('../images/menu_icon.png') no-repeat center center; transform: rotate(0); transition: all 0.2s ease 0s; }
 	.menu__toggler.active { transform: rotate(90deg); }
 	.menu__toggler + .menu__nav { height: 0; opacity: 0; margin-top: -10px; visibility: hidden; transition: all 0.2s ease 0s; }
 	.menu__toggler + .menu__nav.expanded { height: auto; margin-top: 0; opacity: 1; visibility: visible; }
