--- a/templates/tpl13/css/style.css
+++ b/templates/tpl13/css/style.css
@@ -177,8 +177,8 @@ strong { font-weight: bold; }
 
 .menu__toggler { display: none; }
 
-@media screen and (max-width: 320px) {
-	body { min-width: 320px; }
+@media only screen and (min-device-width: 320px) and (max-device-width: 736px) {
+	body { min-width: 100%; }
 	.menu__toggler { display: block; width: 24px; height: 24px; margin: 10px auto 0; padding: 10px; background: url('../images/menu_icon.png') no-repeat center center; transform: rotate(0); transition: all 0.2s ease 0s; }
 	.menu__toggler.active { transform: rotate(90deg); }
 	.menu__toggler + .menu__nav { height: 0; opacity: 0; margin-top: -10px; visibility: hidden; transition: all 0.2s ease 0s; }
@@ -202,14 +202,14 @@ strong { font-weight: bold; }
 	.cream__title h2 { font-size: 38px; line-height: 40px; margin-bottom: 25px; }
 	.cream__title .cream__order { float: none; }
 	.cream__title .cream__price { float: none; margin: 10px auto 0; }
-	.cream .sale { top: 140px; bottom: initial; left: -20px; }
+	.cream .sale { top: 140px; bottom: initial; left: 50%; margin-left: -162px; }
 	.left_side { width: 100%; float: none; }
 	.description__right { width: 100%; float: none; font-size: 15px; line-height: 20px; padding: 10px 5px; box-sizing: border-box; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; -ms-box-sizing: border-box; -o-box-sizing: border-box; margin-bottom: 20px; }
 	.description__right h2 { font-size: 40px; line-height: 42px; margin-bottom: 10px; }
 	.description__right p + h2 { margin-top: 10px; }
 	.description__right ul { margin-top: 10px; } 
 	.description__right li { margin-bottom: 10px; padding-left: 28px; background-position: left center; min-height: 20px; }
-	.description__right table { padding: 0; }
+	.description__right table { width: 100% !important; padding: 0; }
 	.review-doctors { float: none; width: 100%; font-size: 15px; line-height: 20px; margin-bottom: 20px; }
 	.review-doctors h2 { font-size: 40px; line-height: 42px; margin-bottom: 10px; }
 	.review-doctors li { margin-top: 10px; }
@@ -221,7 +221,7 @@ strong { font-weight: bold; }
 	.reviews li p { padding: 0 5px; font-size: 15px; line-height: 20px; }
 	.cream__left { width: 100%; float: none; font-size: 15px; line-height: 20px; padding: 30px 5px 20px; box-sizing: border-box; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; -ms-box-sizing: border-box; -o-box-sizing: border-box; margin-bottom: 0; }
 	.cream__left .product_two { margin: auto; }
-	.cream__left .only_today { background-size: 320px; left: 50%; margin-left: -160px; bottom: 90px; font-size: 16px; line-height: 79px; width: 100%; height: 88px; padding: 0; }
+	.cream__left .only_today { background-size: 320px; left: 50%; margin-left: -160px; bottom: 90px; font-size: 16px; line-height: 79px; right: 0; height: 88px; padding: 0; width: 320px; }
 	.cream__left .only_today span { font-size: 25px; margin-left: 14px; padding: 0 25px; position: relative; top: 3px; }
 	.footer { padding: 20px 5px; box-sizing: border-box; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; -ms-box-sizing: border-box; -o-box-sizing: border-box; }
 	.footer__logo h2 { font-size: 60px; line-height: 60px; padding-bottom: 26px; }
