style fixes (mobile)

--- a/templates/tpl11/css/mobile.css
+++ b/templates/tpl11/css/mobile.css
@@ -1,3 +1,4 @@
+.menu__toggler { display: none; }
 @media only screen and (min-device-width: 320px) and (max-device-width: 736px) {
     body { min-width: 100%; }
     .container { width: 100%; }
