--- a/templates/tpl12/css/mobile.css
+++ b/templates/tpl12/css/mobile.css
@@ -1,3 +1,4 @@
+.menu__toggler { display: none; }
 @media only screen and (min-device-width: 320px) and (max-device-width: 736px) {
     body { min-width: 100%; }
     .container { width: 100%; }
@@ -6,7 +7,7 @@
     .header__top .social { float: none; margin: auto; text-align: center; padding: 12px 0; order: 1; }
     .header__top .social__menu { float: none; }
     .header__top .header__order { float: none; width: 100%; order: 0; }
-    .header__top .header__order a { box-sizing: border-box; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; -ms-box-sizing: border-box; -o-box-sizing: border-box; width: 252px; height: 38px; line-height: 30px; background-size: contain; text-align: center; padding: 0 0 0 15px; background-position: 0 0; }
+    .header__top .header__order a { box-sizing: border-box; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; -ms-box-sizing: border-box; -o-box-sizing: border-box; width: 252px; height: 38px; line-height: 30px; background-size: contain; text-align: center; padding: 0 0 0 15px; background-position: 0 0; display: block; margin: 0 auto; font-size: 16px; }
     .header__middle .logo { float: none; }
     .header__middle .logo h1 { line-height: 60px; font-size: 60px; text-align: center; }
     .header__middle .menu__nav { float: none; }
@@ -40,6 +41,7 @@
     .cream__left .product_two { margin: auto; }
     .footer { padding: 20px 0; }
     .footer__logo { float: none; text-align: center; margin-bottom: 10px; }
+    .footer__logo h2 { font-size: 45px; }
     .footer__order { float: none; text-align: center; }
     .footer__order a { font-size: 20px; }
 }
