--- a/templates/tpl13/css/mobile.css
+++ b/templates/tpl13/css/mobile.css
@@ -1,3 +1,4 @@
+.menu__toggler { display: none; }
 @media only screen and (min-device-width: 320px) and (max-device-width: 736px) {
     body { min-width: 100%; }
     .container { width: 100%; }
@@ -39,8 +40,8 @@
     .cream__left { width: 100%; float: none; font-size: 15px; line-height: 20px; padding: 30px 5px 20px; box-sizing: border-box; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; -ms-box-sizing: border-box; -o-box-sizing: border-box; margin-bottom: 0; }
     .cream__left .product_two { margin: auto; }
     .cream__left .only_today { background-size: 320px; left: 50%; margin-left: -160px; bottom: 90px; font-size: 16px; line-height: 79px; right: 0; height: 88px; padding: 0; width: 320px; }
-    .cream__left .only_today span { font-size: 25px; margin-left: 14px; padding: 0 25px; position: relative; top: 3px; }
+    .cream__left .only_today span { font-size: 25px; padding: 0; margin: 0; position: relative; top: 3px; }
     .footer { padding: 20px 5px; box-sizing: border-box; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; -ms-box-sizing: border-box; -o-box-sizing: border-box; }
-    .footer__logo h2 { font-size: 60px; line-height: 60px; padding-bottom: 26px; }
+    .footer__logo h2 { font-size: 40px; line-height: 60px; padding-bottom: 26px; }
     .footer__order a { width: 100%; box-sizing: border-box; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; -ms-box-sizing: border-box; -o-box-sizing: border-box; text-align: center; padding: 0; }
 }
