--- a/templates/tpl14/css/mobile.css
+++ b/templates/tpl14/css/mobile.css
@@ -1,5 +1,6 @@
 .menu__toggler { display: none; }
 @media only screen and (min-device-width: 320px) and (max-device-width: 736px) {
+    img { max-width: 100%; }
     body { min-width: 100%; }
     .container { width: 100%; }
     .header__top { padding-bottom: 10px; }
@@ -21,9 +22,9 @@
     .cream__title h2 { font-size: 40px; }
     .cream__title .cream__order { float: none; }
     .cream__title .cream__price { float: none; margin: 10px auto 0; }
-    .main_content.container { display: flex; -webkit-display: flex; -moz-display: flex; -ms-display: flex; o-display: flex; flex-wrap: wrap; }
-    .main_content .left_side { float: none; width: 100%; order: 1; }
-    .main_content .right_side { float: none; width: 100%; order: 0; }
+    .header ~ .container { display: flex; -webkit-display: flex; -moz-display: flex; -ms-display: flex; o-display: flex; flex-wrap: wrap; }
+    .container .left_side { float: none; width: 100%; order: 1; }
+    .container .right_side { float: none; width: 100%; order: 0; }
     .description__right { width: 100%; padding: 10px; box-sizing: border-box; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; -ms-box-sizing: border-box; -o-box-sizing: border-box; float: none; font-size: 15px; line-height: 1.4; margin-bottom: 0; }
     .description__right h2 { font-size: 40px; line-height: 45px; margin-bottom: 10px; }
     .description__right p ~ h2 { margin-top: 15px; }
